test/corpus/basics.txt
================================================================================
Version statement
================================================================================

version 1.2

--------------------------------------------------------------------------------

(document
  (version
    (version_identifier)))

================================================================================
Comments
================================================================================

version 1.2

# This is a comment

--------------------------------------------------------------------------------

(document
  (version
    (version_identifier))
  (comment))

================================================================================
Import
================================================================================

version 1.2

import "tasks.wdl"

--------------------------------------------------------------------------------

(document
  (version
    (version_identifier))
  (import
    (string_literal
      (double_quoted_string
        (string_text_double)))))

================================================================================
Import with alias
================================================================================

version 1.2

import "tasks.wdl" as t

--------------------------------------------------------------------------------

(document
  (version
    (version_identifier))
  (import
    (string_literal
      (double_quoted_string
        (string_text_double)))
    (identifier)))

================================================================================
Import with struct alias
================================================================================

version 1.2

import "tasks.wdl" alias MyStruct as RenamedStruct

--------------------------------------------------------------------------------

(document
  (version
    (version_identifier))
  (import
    (string_literal
      (double_quoted_string
        (string_text_double)))
    (import_alias
      (identifier)
      (identifier))))
